--- a/MyChatApp/app/src/main/AndroidManifest.xml
+++ b/MyChatApp/app/src/main/AndroidManifest.xml
@@ -27,8 +27,10 @@
         <activity android:name=".activities.DashboardActivity" />
         <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.StatusActivity" />
-        <activity android:name=".activities.ProfileActivity" />
-        <activity android:name=".activities.ChatActivity"></activity>
+        <activity android:name=".activities.ProfileActivity"
+            android:parentActivityName=".activities.DashboardActivity"/>
+        <activity android:name=".activities.ChatActivity"
+            android:parentActivityName=".activities.DashboardActivity"></activity>
     </application>
 
 </manifest>
