--- a/TaskManagerApp/app/build.gradle
+++ b/TaskManagerApp/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
@@ -43,4 +42,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.1.7"
     implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+
+    //Databinding
+    kapt 'com.android.databinding:compiler:3.0.1'
 }
